#26: improve spotless check configuration to enforce correct indentation.